add support for session list
fix #494
fix #495
fix #496
